--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.css"/>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.css"/>
+    <script src="bootstrap/js/bootstrap.js"></script>
+    <script src="angular.js"></script>
 </head>
 <body>
-<script src="angular.js"></script>
 </body>
 </html>
